# canoniq

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRD Update- Multi-Source and Multi-Format Data Support for CanonIQ.docx  PRD.md  Product Requirements Document- CanonIQ.docx  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
canoniq/: __init__.py  cli.py  config.py  engine.py
canoniq/ai/: __init__.py  _text.py  base.py  embedding_matcher.py  optional_ai_matcher.py  registry.py  sentence_transformer_matcher.py
canoniq/connectors/: __init__.py  _placeholder.py  azure_blob_connector.py  base.py  bigquery_connector.py  csv_connector.py  excel_connector.py  gcs_connector.py  json_connector.py  jsonl_connector.py  mysql_connector.py  parquet_connector.py  postgres_connector.py  redshift_connector.py  rest_api_connector.py  s3_connector.py  snowflake_connector.py  sqlite_connector.py
canoniq/core/: __init__.py  constants.py  models.py  util.py
canoniq/demos/: __init__.py  higher_ed.py  pipeline.py
canoniq/domains/: __init__.py
canoniq/drift/: __init__.py  drift_detector.py
canoniq/matcher/: __init__.py  alias_matcher.py  mapping_engine.py  name_matcher.py  pattern_matcher.py  range_matcher.py  type_matcher.py
canoniq/onboarding/: __init__.py  config.py  models.py  orchestrator.py  readiness.py
canoniq/profiler/: __init__.py  base.py  pattern_detection.py  pii_detection.py  profiler.py  type_inference.py
canoniq/registry/: __init__.py  canonical_schema.py  mapping_registry.py
canoniq/scoring/: __init__.py  confidence.py
canoniq/sources/: __init__.py  config_loader.py
canoniq/transform/: __init__.py  transformer.py
canoniq/validation/: __init__.py  formats.py  validator.py  (+1 more)
docs/: architecture.md  concepts.md  connectors.md  demos.md  domain_packs.md  finance_use_case.md  healthcare_use_case.md  higher_ed_use_case.md  logistics_use_case.md  onboarding.md  quickstart.md  retail_use_case.md  roadmap.md  security.md  sources.md  standards_mapping.md
examples/: README.md
tests/: conftest.py  test_ai_config.py  test_canonical_schema.py  test_cli.py  test_cloud_embeddings.py  test_confidence.py  test_config_and_registry.py  test_connector_placeholders.py  test_csv_profiler.py  test_demo_data.py  test_domain_examples.py  test_drift_detector.py  test_format_validators.py  test_json_profiler.py  test_jsonl_connector.py  test_mapping_engine.py  test_onboarding.py  test_pattern_detection.py  test_pii_detection.py  test_source_config.py  test_transformer.py  test_type_inference.py  test_validation_rules.py
(+78 files in other folders)
