[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canoniq"
version = "0.1.0"
description = "AI-Powered Canonical Mapping Engine — map messy source data into trusted canonical models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "CanonIQ maintainers" }]
keywords = [
    "data-mapping", "schema-mapping", "canonical-model", "data-onboarding",
    "data-profiling", "schema-drift", "etl", "data-quality",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]
dependencies = [
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
files = ["openpyxl", "pyarrow"]
databases = ["sqlalchemy", "psycopg2-binary", "pymysql"]
bigquery = ["google-cloud-bigquery"]
snowflake = ["snowflake-connector-python"]
aws = ["boto3", "s3fs"]
azure = ["azure-storage-blob"]
gcp = ["google-cloud-storage", "google-cloud-bigquery"]
ai = ["sentence-transformers"]
all = [
    "openpyxl", "pyarrow", "sqlalchemy", "psycopg2-binary", "pymysql",
    "google-cloud-bigquery", "google-cloud-storage",
    "snowflake-connector-python", "boto3", "s3fs", "azure-storage-blob",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.4",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/okyke-technologies/canoniq"
Repository = "https://github.com/okyke-technologies/canoniq"
Documentation = "https://github.com/okyke-technologies/canoniq/tree/main/docs"
Changelog = "https://github.com/okyke-technologies/canoniq/blob/main/CHANGELOG.md"

[project.scripts]
canoniq = "canoniq.cli:app"

[tool.setuptools.packages.find]
include = ["canoniq*"]

[tool.setuptools.package-data]
canoniq = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["canoniq"]
omit = ["canoniq/connectors/*_connector.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
